force-app/main/default/objects/Docsumo_Config__mdt/Docsumo_Config__mdt.object-meta.xml
<CustomObject>
    <label>Docsumo Config</label>
    <pluralLabel>Docsumo Configs</pluralLabel>
</CustomObject>