force-app/main/default/objects/Docsumo_Config__mdt/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <label>api key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>