force-app/main/default/objects/Docsumo_Config__mdt/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>