force-app/main/default/objects/Docsumo_Config__mdt/fields/base_url__c.field-meta.xml
<CustomField>
    <fullName>base_url__c</fullName>
    <label>Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>