force-app/main/default/objects/Docsumo_Config__mdt/fields/matchField__c.field-meta.xml
<CustomField>
    <fullName>matchField__c</fullName>
    <label>Field to Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>